add paige headshot

--- a/about.html
+++ b/about.html
@@ -416,10 +416,10 @@
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <img class="rounded-circle" src="images/rutgers/headshot-arnold.jpg">
                         <h6 class="p-3">
                             Paige Arnold <br>
-                            <small class="text-muted">Undergraduate Student, Temple University</small>
+                            <small class="text-muted">Undergraduate Student, Rutgers University</small>
                         </h6>
                     </div>
                   </div>
