--- a/videos.html
+++ b/videos.html
@@ -53,7 +53,7 @@
                             </div>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="mailto:jonny5@berkeley.edu">Contact</a>
+                            <a class="nav-link" href="mailto:circles.consortium@gmail.com">Contact</a>
                         </li>
                     </ul>
                 </div>
