--- a/about.html
+++ b/about.html
@@ -356,7 +356,7 @@
                         </h6>
                     </div>  
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <img class="rounded-circle" src="images/vanderbilt/headshot-nice.jpg">
                         <h6 class="p-3">
                             Matthew Nice <br>
                             <small class="text-muted">PhD Student, Vanderbilt University</small>
