--- a/index.html
+++ b/index.html
@@ -261,12 +261,12 @@
                     </div>
                 </div>
 				
-				<!--<br>
+				<br>
 				
 				<div class="row">
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="images/project/flow2-alt.jpg" class="card-img-top">
+                            <img src="images/project/libpanda-grey.png" class="card-img-top">
                             <div class="card-body">
                                 <h5 class="card-title">Libpanda</h5>
                                 <p class="card-text text-secondary">
@@ -276,7 +276,7 @@
                             </div>
                         </div>
                     </div>
-                </div>-->
+                </div>
                 <div class="py-5"></div>
             </div>
         </section>
