tweak some revisions

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                             Traffic jams and pollution? We help both with AI.
                         </p>
                         <p>
-                            The <b>Congestion Impacts Reduction via CAV-in-the-loop Lagrangian Energy Smoothing (CIRCLES)</b> project aims to reduce instabilities in traffic flow, called <a href="https://ed.ted.com/lessons/what-is-phantom-traffic-and-why-is-it-ruining-your-life-benjamin-seibold" target="_blank">"phantom jams"</a>, that cause congestion and wasted energy. If you have ever encounted a temporary traffic jam for no apparent reason, this might have been a phantom jams that occurred naturally because of human driving behavior. 
+                            The <b>Congestion Impacts Reduction via CAV-in-the-loop Lagrangian Energy Smoothing (CIRCLES)</b> project aims to reduce instabilities in traffic flow, called "<a href="https://ed.ted.com/lessons/what-is-phantom-traffic-and-why-is-it-ruining-your-life-benjamin-seibold" target="_blank">phantom jams</a>," that cause congestion and wasted energy. If you have ever encounted a temporary traffic jam for no apparent reason, this might have been a phantom jam that occurred naturally because of human driving behavior.
 						</p>
 						<p>
-							<a href="https://phantomjams.github.io" target="_blank">Prior work on closed course testing</a> demonstrated that phantom jams can be reduced using autonomous vehicle technologies and specially-designed algorithms. The CIRCLES project seeks to extend this technology to real-world traffic, where reducing these negative traffic effects could provide ≥10% energy savings.
+							<a href="https://phantomjams.github.io" target="_blank">Prior work on closed-course testing</a> demonstrated that phantom jams can be reduced using autonomous vehicle technologies and specially-designed algorithms. The CIRCLES project seeks to extend this technology to real-world traffic, where reducing these negative traffic effects could provide ≥10% energy savings.
 						</p>
 						
                     </div>
@@ -150,12 +150,12 @@
                 <div class="py-md-5"></div>
                 <h1>Our Team</h1>
                 <p class="lead text-california-gold">
-                    Consists of 5 lead researchers and 35 scholars coming from diverse academic backgrounds.
+                    The CIRCLES Consortium onsists of 5 lead researchers and 35 scholars coming from diverse academic backgrounds.
                 </p>
                 <div class="row">
                     <div class="col-md-5">
                         <p>
-                            CIRCLES is led by UC Berkeley and the Institute of Transportation Studies (ITS) Berkeley, in coordination with Vanderbilt University, University of Arizona, Temple University, Rutgers University-Camden, the Tennessee Department of Transportation, and Toyota North America. 
+                            CIRCLES is led by UC Berkeley and the Institute of Transportation Studies (ITS) Berkeley, in coordination with Vanderbilt University, University of Arizona, Temple University, Rutgers University-Camden, the Tennessee Department of Transportation, Toyota North America, and General Motors.
                             The project is backed primarily by DOE and NSF funding. It will also provide the opportunity for engagement with major automotive partners and federal agencies (e.g., DOE, DOT).
                         </p>
 						<p>
