--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="col-md-6 d-flex align-items-center justify-content-center">
                         <figure class="figure">
                             <img src="images/vanderbilt/all-trajectories.gif" class="figure-img img-fluid rounded">
-                            <figcaption class="figure-caption">Vehicle and traffic flow detection in the I-24 Mobility Technology Interstate Observation Network (MOTION).</figcaption>
+                            <figcaption class="figure-caption">Preliminary vehicle and traffic flow detection in the I-24 Mobility Technology Interstate Observation Network (MOTION).</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                             <img src="images/berkeley/flow.gif" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">
                                 FLOW uses deep reinforcement learning to produce optimal traffic simulations.
-                                In this simulation, the continuous and autonomous vehicle (CAV) learned to create a snake for optimal traffic flow.
+                                In this simulation, the autonomous vehicle learned to create a snake for optimal traffic flow.
                             </figcaption>
                         </figure>
                     </div>
