--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 							  Resources
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="nav-link" href="videos.html">Videos</a>
+								<a class="dropdown-item" href="videos.html">Videos</a>
 							</div>
 						</li>
 						<!-- <li class="nav-item dropdown">
