Update Products dropdown for video.html

--- a/videos.html
+++ b/videos.html
@@ -31,6 +31,8 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="https://flow-project.github.io/" target="_blank">FLOW</a>
                             <a class="dropdown-item" href="https://github.com/DerekGloudemans/I24-MOTION-examples" target="_blank">I-24 MOTION</a>
+                            <a class="dropdown-item" href="https://jmscslgroup.github.io/strym/" target="_blank">Strym</a>
+                            <a class="dropdown-item" href="https://jmscslgroup.github.io/libpanda/" target="_blank">Libpanda</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
