--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="py-md-5"></div>
                 <h1>Our Team</h1>
                 <p class="lead text-california-gold">
-                    The CIRCLES Consortium onsists of 5 lead researchers and 35 scholars coming from diverse academic backgrounds.
+                    The CIRCLES Consortium consists of 5 lead researchers and 35 scholars coming from diverse academic backgrounds.
                 </p>
                 <div class="row">
                     <div class="col-md-5">
