--- a/about.html
+++ b/about.html
@@ -311,7 +311,7 @@
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/berkeley/headshot-aquino.jpeg">
+                        <img class="rounded-circle" src="images/berkeley/headshot-aquino.jpg">
                         <h6 class="p-3">
                             John Aquino <br>
                             <small class="text-muted">Masters Student, UC Berkeley</small>
@@ -402,6 +402,13 @@
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/temple/headshot-khoudari.jpg">
+                        <h6 class="p-3">
+                            Nour Khoudari<br>
+                            <small class="text-muted">PhD Student, Temple University</small>
+                        </h6>
+                    </div>
+                    <div class="col-md-3 col-xs-6 team-max-width">
                         <img class="rounded-circle" src="images/berkeley/headshot-kreidieh.jpg">
                         <h6 class="p-3">
                             Abdul Kreidieh <br>
@@ -416,7 +423,7 @@
                         </h6>
                     </div> 
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <img class="rounded-circle" src="images/berkeley/headshot-ngo.jpg">
                         <h6 class="p-3">
                             Paul Ngo <br>
                             <small class="text-muted">Undergraduate Student, UC Berkeley</small>
