add gm and more headshots

--- a/index.html
+++ b/index.html
@@ -425,8 +425,6 @@
                             <img class="funders-collaborators-img" src="images/collaborators/berkeley-deep-drive.png">
                         </a>
                     </div>
-                </div>
-                <div class="row text-center">
                     <div class="col-md-4 my-4 d-flex align-items-center justify-content-center">
                         <a href="https://www.rutgers.edu/" target="_blank">
                             <img class="funders-collaborators-img" src="images/collaborators/rutgers.png">
@@ -442,11 +440,9 @@
                             <img class="funders-collaborators-img" src="images/collaborators/arizona.png">
                         </a>
                     </div>
-                </div>
-                <div class="row text-center">
                     <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
                         <a href="https://www.vanderbilt.edu/" target="_blank">
-                            <img class="funders-collaborators-img" src="images/collaborators/vanderbilt.png"">
+                            <img class="funders-collaborators-img" src="images/collaborators/vanderbilt.png">
                         </a>
                     </div>
                     <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
@@ -459,20 +455,21 @@
                             <img class="funders-collaborators-img" src="images/collaborators/toyota.png">
                         </a>
                     </div>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-3"></div>
-                    <div class="col-md-3 my-2 d-flex align-items-center justify-content-center">
-                        <a href="https://aws.amazon.com/" target="_blank">
-                            <img class="funders-collaborators-img" src="images/collaborators/aws.png">
+                    <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
+                        <a href="https://www.gm.com/" target="_blank">
+                            <img class="funders-collaborators-img" src="images/collaborators/gm.png">
                         </a>
                     </div>
-                    <div class="col-md-3 my-2 d-flex align-items-center justify-content-center">
-                        <a href="https://new.siemens.com/global/en.html" target="_blank">
-                            <img class="funders-collaborators-img" src="images/collaborators/siemens.png">
+                    <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
+                        <a href="https://aws.amazon.com/" target="_blank">
+                            <img class="funders-collaborators-img" src="images/collaborators/aws.png">
                         </a>        
                     </div>
-                    <div class="col-md-3"></div>
+                    <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
+                        <a href="https://new.siemens.com/global/en.html" target="_blank">
+                            <img class="funders-collaborators-img" src="images/collaborators/siemens.png">
+                        </a>
+                    </div>
                 </div>
                 <div class="py-5"></div>
             </div>
