--- a/about.html
+++ b/about.html
@@ -523,6 +523,34 @@
                   <h2 class="text-center text-secondary p-3">External Research Partners</h2>
                   <div class="row text-center">
                     <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <h6 class="p-3">
+                            Alon Capua <br>
+                            <small class="text-muted">Research Group Manager, GM Research</small>
+                        </h6>
+                    </div> 
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/gm/headshot-urieli.jpeg">
+                        <h6 class="p-3">
+                            Daniel Urieli <br>
+                            <small class="text-muted">Sr Researcher, GM Research</small>
+                        </h6>
+                    </div> 
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <h6 class="p-3">
+                            Sharon Hornstein <br>
+                            <small class="text-muted">Sr Researcher, GM Research</small>
+                        </h6>
+                    </div>
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <h6 class="p-3">
+                            Roi Reshef <br>
+                            <small class="text-muted">Sr Researcher, GM Research</small>
+                        </h6>
+                    </div> 
+                    <div class="col-md-3 col-xs-6 team-max-width">
                         <img class="rounded-circle" src="images/toyota/headshot-ikemura.png">
                         <h6 class="p-3">
                             Ryosuke Ikemura <br>
