add more headshots

--- a/about.html
+++ b/about.html
@@ -501,7 +501,7 @@
                   <h2 class="text-center text-secondary p-3">Interns</h2>
                   <div class="row text-center">
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <img class="rounded-circle" src="images/berkeley/headshot-ardoin.png">
                         <h6 class="p-3">
                             Thibaud Ardoin <br>
                             <small class="text-muted">Masters Student, ENS Paris-Saclay</small>
@@ -523,14 +523,14 @@
                   <h2 class="text-center text-secondary p-3">External Research Partners</h2>
                   <div class="row text-center">
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <img class="rounded-circle" src="images/gm/headshot-capua.jpg">
                         <h6 class="p-3">
                             Alon Capua <br>
                             <small class="text-muted">Research Group Manager, GM Research</small>
                         </h6>
                     </div> 
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <img class="rounded-circle" src="images/gm/headshot-hornstein.jpg">
                         <h6 class="p-3">
                             Sharon Hornstein <br>
                             <small class="text-muted">Sr Researcher, GM Research</small>
@@ -557,13 +557,6 @@
                             <small class="text-muted">Engineer, Toyota North America</small>
                         </h6>
                     </div>
-                    <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/headshot-placeholder.png">
-                        <h6 class="p-3">
-                            Roi Reshef <br>
-                            <small class="text-muted">Sr Researcher, GM Research</small>
-                        </h6>
-                    </div> 
                     <div class="col-md-3 col-xs-6 team-max-width">
                         <img class="rounded-circle" src="images/gm/headshot-urieli.jpeg">
                         <h6 class="p-3">
@@ -613,7 +606,7 @@
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/headshot-placeholder.png">
+                        <img class="rounded-circle" src="images/rutgers/headshot-truong.jpeg">
                         <h6 class="p-3">
                             Sydney Truong <br>
                             <small class="text-muted">Undergraduate Student, Rutgers University</small>
