update team sections

--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
 				<!------------------ PIs ------------------>
 				<!----------------------------------------->
                 <div id="Leadership" class="tier">
-                  <h2 class="text-center text-secondary p-3">Leadership</h2>
+                  <h2 class="text-center text-secondary p-3">Academic Leadership</h2>
                   <div class="row text-center">
                     <div class="col-md-3 col-xs-6 team-max-width">
                       <img class="rounded-circle" src="images/berkeley/headshot-bayen.jpg">
@@ -170,6 +170,35 @@
                   </div>
                 </div>
 
+                <!------------ Other Leadership ----------->
+                <!----------------------------------------->
+                <div id="Industry Leadership" class="tier">
+                  <h2 class="text-center text-secondary p-3">Industry & Government Leadership</h2>
+                  <div class="row text-center">
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/toyota/headshot-butts.png">
+                        <h6 class="p-3">
+                            Kenneth Butts <br>
+                            <small class="text-muted">Executive Engineer, Toyota North America</small>
+                        </h6>
+                    </div> 
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/tdot/headshot-freeze.jpg">
+                        <h6 class="p-3">
+                            Phillip Freeze <br>
+                            <small class="text-muted">Director of Traffic Operations, Tennessee Department of Transportation</small>
+                        </h6>
+                    </div> 
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/vanderbilt/headshot-philip.jpg">
+                        <h6 class="p-3">
+                            Craig Philip <br>
+                            <small class="text-muted">Professor, Vanderbilt University</small>
+                        </h6>
+                    </div>
+                  </div>
+                </div>
+
 				<!----------- Leadership Staff ------------>
 				<!----------------------------------------->
                 <div id="Project Management" class="tier"><!--  style="display:none"> -->
@@ -190,20 +219,6 @@
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/toyota/headshot-butts.png">
-                        <h6 class="p-3">
-                            Kenneth Butts <br>
-                            <small class="text-muted">Executive Engineer, Toyota North America</small>
-                        </h6>
-                    </div> 
-                    <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/tdot/headshot-freeze.jpg">
-                        <h6 class="p-3">
-                            Phillip Freeze <br>
-                            <small class="text-muted">Director of Traffic Operations, Tennessee Department of Transportation</small>
-                        </h6>
-                    </div> 
-                    <div class="col-md-3 col-xs-6 team-max-width">
                         <img class="rounded-circle" src="images/rutgers/headshot-hayat.jpg">
                         <h6 class="p-3">
                             Amaury Hayat <br>
@@ -215,13 +230,6 @@
                         <h6 class="p-3">
                             Sean McQuade <br>
                             <small class="text-muted">Postdoctoral Researcher, Rutgers University</small>
-                        </h6>
-                    </div>
-                    <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/vanderbilt/headshot-philip.jpg">
-                        <h6 class="p-3">
-                            Craig Philip <br>
-                            <small class="text-muted">Professor, Vanderbilt University</small>
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
