add zhe and riley

--- a/about.html
+++ b/about.html
@@ -306,7 +306,7 @@
                   </div>
                 </div>
 
-				<!------------- Grad students ------------->
+				<!----------- Grad/UG students ------------>
 				<!----------------------------------------->
                 <div id="Student Researchers" class="tier">
                   <h2 class="text-center text-secondary p-3">Student Researchers</h2>
@@ -367,6 +367,13 @@
                             <small class="text-muted">PhD Student, University of Arizona</small>
                         </h6>
                     </div> 
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/berkeley/headshot-fu.jpeg">
+                        <h6 class="p-3">
+                            Zhe Fu <br>
+                            <small class="text-muted">PhD Student, UC Berkeley</small>
+                        </h6>
+                    </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
                         <img class="rounded-circle" src="images/berkeley/headshot-gibson.jpg">
                         <h6 class="p-3">
@@ -479,6 +486,13 @@
                             <small class="text-muted">PhD Candidate, UC Berkeley</small>
                         </h6>
                     </div> 
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/arizona/headshot-wagner.jpg">
+                        <h6 class="p-3">
+                            Riley Wagner <br>
+                            <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                        </h6>
+                    </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
                         <img class="rounded-circle" src="images/berkeley/headshot-wu.jpg">
                         <h6 class="p-3">
