correct rileys institution

--- a/about.html
+++ b/about.html
@@ -490,7 +490,7 @@
                         <img class="rounded-circle" src="images/arizona/headshot-wagner.jpg">
                         <h6 class="p-3">
                             Riley Wagner <br>
-                            <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                            <small class="text-muted">Undergraduate Student, University of Arizona</small>
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
