update amaury and xiaoqian

--- a/about.html
+++ b/about.html
@@ -219,13 +219,6 @@
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/rutgers/headshot-hayat.jpg">
-                        <h6 class="p-3">
-                            Amaury Hayat <br>
-                            <small class="text-muted">Postdoctoral Researcher, Rutgers University</small>
-                        </h6>
-                    </div>
-                    <div class="col-md-3 col-xs-6 team-max-width">
                         <img class="rounded-circle" src="images/rutgers/headshot-mcquade.jpg">
                         <h6 class="p-3">
                             Sean McQuade <br>
@@ -266,20 +259,6 @@
                         <h6 class="p-3">
                             Matthew Bunting <br>
                             <small class="text-muted">Postdoctoral Researcher, University of Arizona</small>
-                        </h6>
-                    </div>
-                    <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/rutgers/headshot-gong.png">
-                        <h6 class="p-3">
-                            Xiaoqian Gong <br>
-                            <small class="text-muted">Postdoctoral Researcher, Rutgers University</small>
-                        </h6>
-                    </div> 
-                    <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/rutgers/headshot-hayat.jpg">
-                        <h6 class="p-3">
-                            Amaury Hayat <br>
-                            <small class="text-muted">Postdoctoral Researcher, Rutgers University</small>
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
@@ -551,6 +530,20 @@
                             <small class="text-muted">Research Group Manager, GM Research</small>
                         </h6>
                     </div> 
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/rutgers/headshot-gong.png">
+                        <h6 class="p-3">
+                            Xiaoqian Gong <br>
+                            <small class="text-muted">Teaching Faculty, Arizona State University</small>
+                        </h6>
+                    </div>
+                    <div class="col-md-3 col-xs-6 team-max-width">
+                        <img class="rounded-circle" src="images/rutgers/headshot-hayat.jpg">
+                        <h6 class="p-3">
+                            Amaury Hayat <br>
+                            <small class="text-muted">Assistant Professor, Ecole des Ponts Paristech</small>
+                        </h6>
+                    </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
                         <img class="rounded-circle" src="images/gm/headshot-hornstein.jpg">
                         <h6 class="p-3">
