--- a/about.html
+++ b/about.html
@@ -424,7 +424,7 @@
                         </h6>
                     </div>
                     <div class="col-md-3 col-xs-6 team-max-width">
-                        <img class="rounded-circle" src="images/berkeley/headshot-nguyen.jpg">
+                        <img class="rounded-circle" src="images/berkeley/headshot-nguyen.png">
                         <h6 class="p-3">
                             Brian Nguyen <br>
                             <small class="text-muted">Undergraduate Student, UC Berkeley</small>
