--- a/videos.html
+++ b/videos.html
@@ -78,7 +78,7 @@
             </div>
         </section>
 
-        <br>
+        <div class="my-5"></div>
 
         <footer class="footer bg-light">
             <div class="container p-3 text-center">
