--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             Traffic jams and pollution? We help both with AI.
                         </p>
                         <p>
-                            The <b>Congestion Impacts Reduction via CAV-in-the-loop Lagrangian Energy Smoothing (CIRCLES)</b> project aims to reduce instabilities in traffic flow, called "<a href="https://ed.ted.com/lessons/what-is-phantom-traffic-and-why-is-it-ruining-your-life-benjamin-seibold" target="_blank">phantom jams</a>," that cause congestion and wasted energy. If you have ever encounted a temporary traffic jam for no apparent reason, this might have been a phantom jam that occurred naturally because of human driving behavior.
+                            The <b>Congestion Impacts Reduction via CAV-in-the-loop Lagrangian Energy Smoothing (CIRCLES)</b> project aims to reduce instabilities in traffic flow, called "<a href="https://ed.ted.com/lessons/what-is-phantom-traffic-and-why-is-it-ruining-your-life-benjamin-seibold" target="_blank">phantom jams</a>," that cause congestion and wasted energy. If you have ever encountered a temporary traffic jam for no apparent reason, this might have been a phantom jam that occurred naturally because of human driving behavior.
 						</p>
 						<p>
 							<a href="https://phantomjams.github.io" target="_blank">Prior work on closed-course testing</a> demonstrated that phantom jams can be reduced using autonomous vehicle technologies and specially-designed algorithms. The CIRCLES project seeks to extend this technology to real-world traffic, where reducing these negative traffic effects could provide ≥10% energy savings.
