aboudy to phd candidate

--- a/about.html
+++ b/about.html
@@ -415,7 +415,7 @@
                                     <img class="rounded-circle" src="images/berkeley/headshot-kreidieh.jpg">
                                     <h6 class="p-3">
                                         Abdul Kreidieh <br>
-                                        <small class="text-muted">PhD Student, UC Berkeley</small>
+                                        <small class="text-muted">PhD Candidate, UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
