--- a/about.html
+++ b/about.html
@@ -349,7 +349,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-dehmoubed.jpeg">
                                     <h6 class="p-3">
                                         Ryan Dehmoubed <br>
                                         <small class="text-muted">Undergraduate Student, UC Berkeley</small>
