--- a/videos.html
+++ b/videos.html
@@ -75,6 +75,13 @@
                         <iframe width="100%" height="415" src="https://www.youtube.com/embed/TNokBgtSUvQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 text-center">
+                        <h2>Humans Cause Traffic Jams, AI Can Fix Them</h2>
+                        <p>A <a href="https://www.pbs.org/show/overview/" target="_blank">PBS Terra | Overview</a> presentation featuring PI Professor Alexandre Bayen</p>
+                        <iframe width="956" height="538" src="https://www.youtube.com/embed/WMRziLak2Zo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
         </section>
 
