add fortune video

--- a/videos.html
+++ b/videos.html
@@ -70,18 +70,26 @@
                 </h1>
                 <div class="row justify-content-center">
                     <div class="col-xl-8 text-center">
-                        <h2>What is phantom traffic and why is it ruining your life?</h2>
-                        <p>A <a href="https://ed.ted.com/lessons/what-is-phantom-traffic-and-why-is-it-ruining-your-life-benjamin-seibold" target="_blank">TED-Ed</a> presentation by co-PI Professor Benjamin Seibold</p>
-                        <iframe width="100%" height="415" src="https://www.youtube.com/embed/TNokBgtSUvQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <h2>Humans Cause Traffic Jams, AI Can Fix Them</h2>
+                        <p>A <a href="https://www.pbs.org/show/overview/" target="_blank">PBS Terra | Overview</a> presentation featuring PI Professor Alexandre Bayen</p>
+                        <iframe width="50%" height="208" src="https://www.youtube.com/embed/WMRziLak2Zo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-xl-8 text-center">
-                        <h2>Humans Cause Traffic Jams, AI Can Fix Them</h2>
-                        <p>A <a href="https://www.pbs.org/show/overview/" target="_blank">PBS Terra | Overview</a> presentation featuring PI Professor Alexandre Bayen</p>
-                        <iframe width="100%" height="415" src="https://www.youtube.com/embed/WMRziLak2Zo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <h2>Using A.I. to eliminate traffic jams</h2>
+                        <p>A <a href="https://fortune.com/videos/watch/Using-AI-to-eliminate-traffic-jams/5bec81f7-c6c7-4739-88c7-7b1bcfe96c8f" target="_blank">Fortune | On Demand</a> segment featuring PI Professor Alexandre Bayen</p>
+                        <iframe width="50%" height="208" src="https://www.youtube.com/embed/P4RRbtSdO18" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 text-center">
+                        <h2>What is phantom traffic and why is it ruining your life?</h2>
+                        <p>A <a href="https://ed.ted.com/lessons/what-is-phantom-traffic-and-why-is-it-ruining-your-life-benjamin-seibold" target="_blank">TED-Ed</a> presentation by co-PI Professor Benjamin Seibold</p>
+                        <iframe width="50%" height="208" src="https://www.youtube.com/embed/TNokBgtSUvQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                
             </div>
         </section>
 
