--- a/about.html
+++ b/about.html
@@ -298,6 +298,13 @@
                                         <small class="text-muted">Postdoctoral Researcher, Temple University</small>
                                     </h6>
                                 </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/pennstate/headshot-salehi.jpg">
+                                    <h6 class="p-3">
+                                        Najmeh Salehi <br>
+                                        <small class="text-muted">Postdoctoral Researcher, Pennsylvania State University</small>
+                                    </h6>
+                                </div>
                             </div>
                         </div>
                     </div>
