--- a/about.html
+++ b/about.html
@@ -384,9 +384,9 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/arizona/headshot-fuentes.jpg">
                                     <h6 class="p-3">
-                                        Ruben Diego Fuentes <br>
+                                        Rubén Diego Fuentes <br>
                                         <small class="text-muted">Undergraduate Student, University of Arizona</small>
                                     </h6>
                                 </div>
