--- a/about.html
+++ b/about.html
@@ -496,7 +496,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/arizona/headshot-tran.jpg">
                                     <h6 class="p-3">
                                         Minh Tran <br>
                                         <small class="text-muted">Undergraduate Student, University of Arizona</small>
